fixed footer and about page on mobile

--- a/res/about.css
+++ b/res/about.css
@@ -138,7 +138,7 @@ body {
         font-size: 2em;
     }
     #section1 .right-section p {
-        font-size: 1em;
+        font-size: 1.3em;
     }
     #section2 {
         flex-direction: column;
